<resources>
    <string name="yardscape">Yardscape</string>
    <string name="app_name">Yardscape</string>
    <string name="current_listings">Current Listings for Today</string>
    <string name="nameLine">Listing Title</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="create_listing">Create Listing</string>
    <string name="description">Description (optional)</string>
    <string name="time">Time of listing</string>
    <string name="dummyListing">A new listings title will appear here</string>
    <string name="empty_screen">\"There are currently no listings in your area\"</string>
    <string name="btn_retry">Retry</string>
    <item name="defaultPicture" type="string">src\main\res\drawable\android_image_1.xml</item>
    <item name="imageThumbnail" type="string">Image Preview</item>
    <item name="uploadImage" type="string">Upload Image</item>
    <item name="account" type="string">Account</item>
    <item name="settings" type="string">Settings</item>


    <string name="demoTitle">Example Title</string>
    <string name="demoDate">December 24, 2020</string>
    <string name="demoTime">17:00</string>
    <string name="demoDesc">Information the user submitted about the listing </string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
</resources>