<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_light_background">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:contentDescription="@string/imageThumbnail"
        app:srcCompat="@drawable/profile_icon" />

    <TextView
        android:id="@+id/open_listing_title"
        android:layout_width="369dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="289dp"
        android:textSize="20pt"
        android:text="TextView" />

    <TextView
        android:id="@+id/open_listing_date"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="322dp"
        android:text="@string/demoDate" />

    <TextView
        android:id="@+id/open_listing_time"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="264dp"
        android:layout_marginBottom="323dp"
        android:text="@string/demoTime" />

    <TextView
        android:id="@+id/open_listing_desc"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="99dp"
        android:text="@string/demoDesc"
        android:textSize="8pt" />
</RelativeLayout>